fix margin collapse

--- a/css/main.css
+++ b/css/main.css
@@ -497,14 +497,9 @@ button {
 }
 
 .features__list {
+  display: flex;
+  flex-wrap: wrap;
   margin: -15px;
-}
-
-@media screen and (min-width: 768px) {
-  .features__list {
-    display: flex;
-    flex-wrap: wrap;
-  }
 }
 
 .features__item {
@@ -600,18 +595,13 @@ button {
 }
 
 .team__list {
+  display: flex;
+  flex-wrap: wrap;
   margin: -15px;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-}
-
-@media screen and (min-width: 768px) {
-  .team__list {
-    display: flex;
-    flex-wrap: wrap;
-  }
 }
 
 .team__item {
@@ -966,13 +956,8 @@ button {
 
 .portfolio__grid {
   margin: -15px;
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio__grid {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .grid__item {
@@ -1000,6 +985,8 @@ button {
 
 .grid__link {
   display: block;
+  height: 100%;
+  border-bottom: 1px solid var(--border-color);
   box-shadow: none;
   transition-property: box-shadow;
   transition-duration: var(--trans-duration);
@@ -1010,10 +997,15 @@ button {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .grid__link {
+    max-height: 440px;
+  }
+}
+
 .grid__content {
   padding: 20px 24px;
   border-left: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
 }
 
