--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,10 +1,10 @@
 .features__list{
+    display: flex;
+    flex-wrap: wrap;
+
     margin: -15px;
 
-    @include media($tablet) {        
-        display: flex;
-        flex-wrap: wrap;        
-    }
+
 }
 
 .features__item {
