--- a/sass/components/_portfolio-grid.scss
+++ b/sass/components/_portfolio-grid.scss
@@ -1,11 +1,7 @@
 .portfolio__grid {
     margin: -15px;
-
-    @include media($tablet) {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    
+    display: flex;
+    flex-wrap: wrap;    
 }
 
 .grid__item {
@@ -28,6 +24,8 @@
 
 .grid__link {
     display: block;
+    height: 100%;
+    border-bottom: 1px solid var(--border-color);
 
     box-shadow: none;
 
@@ -40,14 +38,16 @@
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
             0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);
-    }    
+    } 
+    @media screen and (min-width: 768px) and (max-width:1200px) {
+        max-height: 440px;
+    }
 }
 
 .grid__content {
-    padding: 20px 24px;
+    padding: 20px 24px;    
 
-    border-left: 1px solid var(--border-color);
-    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);    
     border-right: 1px solid var(--border-color);
 }
 
