--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,18 +3,15 @@
 }
 
 .team__list {
+    display: flex;
+    flex-wrap: wrap;
+
     margin: -15px;
 
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;    
-    
-    @include media($tablet) {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
+    letter-spacing: 0.03em;        
 }
 
 .team__item {  
